LibSharpPhysX/Generated/PxGeometryHelpers.h

//Generated by MinBinder.

ES physx::PxGeometryType::Enum C_CONST_PxGeometryHolder_getType(physx::PxGeometryHolder cls){ // L67

    return cls.getType();
}

ES physx::PxGeometry* C_REF_PxGeometryHolder_any(physx::PxGeometryHolder cls){ // L72

    return &cls->any();
}

ES physx::PxGeometry* C_CONST_REF_PxGeometryHolder_any(physx::PxGeometryHolder cls){ // L77

    return &cls->any();
}

ES physx::PxSphereGeometry* C_REF_PxGeometryHolder_sphere(physx::PxGeometryHolder cls){ // L82

    return &cls->sphere();
}

ES physx::PxSphereGeometry* C_CONST_REF_PxGeometryHolder_sphere(physx::PxGeometryHolder cls){ // L87

    return &cls->sphere();
}

ES physx::PxPlaneGeometry* C_REF_PxGeometryHolder_plane(physx::PxGeometryHolder cls){ // L92

    return &cls->plane();
}

ES physx::PxPlaneGeometry* C_CONST_REF_PxGeometryHolder_plane(physx::PxGeometryHolder cls){ // L97

    return &cls->plane();
}

ES physx::PxCapsuleGeometry* C_REF_PxGeometryHolder_capsule(physx::PxGeometryHolder cls){ // L102

    return &cls->capsule();
}

ES physx::PxCapsuleGeometry* C_CONST_REF_PxGeometryHolder_capsule(physx::PxGeometryHolder cls){ // L107

    return &cls->capsule();
}

ES physx::PxBoxGeometry* C_REF_PxGeometryHolder_box(physx::PxGeometryHolder cls){ // L112

    return &cls->box();
}

ES physx::PxBoxGeometry* C_CONST_REF_PxGeometryHolder_box(physx::PxGeometryHolder cls){ // L117

    return &cls->box();
}

ES physx::PxConvexMeshGeometry* C_REF_PxGeometryHolder_convexMesh(physx::PxGeometryHolder cls){ // L122

    return &cls->convexMesh();
}

ES physx::PxConvexMeshGeometry* C_CONST_REF_PxGeometryHolder_convexMesh(physx::PxGeometryHolder cls){ // L127

    return &cls->convexMesh();
}

ES physx::PxTriangleMeshGeometry* C_REF_PxGeometryHolder_triangleMesh(physx::PxGeometryHolder cls){ // L132

    return &cls->triangleMesh();
}

ES physx::PxTriangleMeshGeometry* C_CONST_REF_PxGeometryHolder_triangleMesh(physx::PxGeometryHolder cls){ // L137

    return &cls->triangleMesh();
}

ES physx::PxHeightFieldGeometry* C_REF_PxGeometryHolder_heightField(physx::PxGeometryHolder cls){ // L142

    return &cls->heightField();
}

ES physx::PxHeightFieldGeometry* C_CONST_REF_PxGeometryHolder_heightField(physx::PxGeometryHolder cls){ // L147

    return &cls->heightField();
}

ES void C_PxGeometryHolder_storeAny(physx::PxGeometryHolder cls,physx::PxGeometry* geometry){ // L152

    return cls.storeAny(*geometry);
}

ES physx::PxGeometryHolder C_PxGeometryHolder_PxGeometryHolder(){ // L172

    return physx::PxGeometryHolder::PxGeometryHolder();
}

ES physx::PxGeometryHolder C_PxGeometryHolder_PxGeometryHolder(physx::PxGeometry* geometry){ // L173

    return physx::PxGeometryHolder::PxGeometryHolder(*geometry);
}

ES void C_PxGeometryHolder_put(physx::PxGeometryHolder cls,physx::PxGeometry* geometry){ // L176

    return cls.put(*geometry);
}

ES * C_REF_PxGeometryHolder_get(physx::PxGeometryHolder cls){ // L181

    return &cls->get();
}

ES * C_CONST_REF_PxGeometryHolder_get(physx::PxGeometryHolder cls){ // L187

    return &cls->get();
}

ES physx::PxGeometryHolder C__(){ // L193

    return physx::PxGeometryHolder();
}