SharpPhysX/Generated/PxGeometryHelpers.cs

//Generated by MinBinder.
using System;
using System.Runtime.InteropServices;

public partial class PxGeometryHolder {
    [DllImport(PhysX.Lib, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
    static extern Enum C_CONST_PxGeometryHolder_getType(PxGeometryHolder cls);
    public Enum getType(){
        return C_CONST_PxGeometryHolder_getType(this);    
    }

    [DllImport(PhysX.Lib, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
    static extern PxGeometryPtr C_REF_PxGeometryHolder_any(PxGeometryHolder cls);
    public PxGeometryPtr any(){
        return C_REF_PxGeometryHolder_any(this);    
    }

    [DllImport(PhysX.Lib, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
    static extern PxGeometryPtr C_CONST_REF_PxGeometryHolder_any(PxGeometryHolder cls);
    public PxGeometryPtr any(){
        return C_CONST_REF_PxGeometryHolder_any(this);    
    }

    [DllImport(PhysX.Lib, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
    static extern PxSphereGeometryPtr C_REF_PxGeometryHolder_sphere(PxGeometryHolder cls);
    public PxSphereGeometryPtr sphere(){
        return C_REF_PxGeometryHolder_sphere(this);    
    }

    [DllImport(PhysX.Lib, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
    static extern PxSphereGeometryPtr C_CONST_REF_PxGeometryHolder_sphere(PxGeometryHolder cls);
    public PxSphereGeometryPtr sphere(){
        return C_CONST_REF_PxGeometryHolder_sphere(this);    
    }

    [DllImport(PhysX.Lib, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
    static extern PxPlaneGeometryPtr C_REF_PxGeometryHolder_plane(PxGeometryHolder cls);
    public PxPlaneGeometryPtr plane(){
        return C_REF_PxGeometryHolder_plane(this);    
    }

    [DllImport(PhysX.Lib, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
    static extern PxPlaneGeometryPtr C_CONST_REF_PxGeometryHolder_plane(PxGeometryHolder cls);
    public PxPlaneGeometryPtr plane(){
        return C_CONST_REF_PxGeometryHolder_plane(this);    
    }

    [DllImport(PhysX.Lib, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
    static extern PxCapsuleGeometryPtr C_REF_PxGeometryHolder_capsule(PxGeometryHolder cls);
    public PxCapsuleGeometryPtr capsule(){
        return C_REF_PxGeometryHolder_capsule(this);    
    }

    [DllImport(PhysX.Lib, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
    static extern PxCapsuleGeometryPtr C_CONST_REF_PxGeometryHolder_capsule(PxGeometryHolder cls);
    public PxCapsuleGeometryPtr capsule(){
        return C_CONST_REF_PxGeometryHolder_capsule(this);    
    }

    [DllImport(PhysX.Lib, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
    static extern PxBoxGeometryPtr C_REF_PxGeometryHolder_box(PxGeometryHolder cls);
    public PxBoxGeometryPtr box(){
        return C_REF_PxGeometryHolder_box(this);    
    }

    [DllImport(PhysX.Lib, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
    static extern PxBoxGeometryPtr C_CONST_REF_PxGeometryHolder_box(PxGeometryHolder cls);
    public PxBoxGeometryPtr box(){
        return C_CONST_REF_PxGeometryHolder_box(this);    
    }

    [DllImport(PhysX.Lib, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
    static extern PxConvexMeshGeometryPtr C_REF_PxGeometryHolder_convexMesh(PxGeometryHolder cls);
    public PxConvexMeshGeometryPtr convexMesh(){
        return C_REF_PxGeometryHolder_convexMesh(this);    
    }

    [DllImport(PhysX.Lib, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
    static extern PxConvexMeshGeometryPtr C_CONST_REF_PxGeometryHolder_convexMesh(PxGeometryHolder cls);
    public PxConvexMeshGeometryPtr convexMesh(){
        return C_CONST_REF_PxGeometryHolder_convexMesh(this);    
    }

    [DllImport(PhysX.Lib, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
    static extern PxTriangleMeshGeometryPtr C_REF_PxGeometryHolder_triangleMesh(PxGeometryHolder cls);
    public PxTriangleMeshGeometryPtr triangleMesh(){
        return C_REF_PxGeometryHolder_triangleMesh(this);    
    }

    [DllImport(PhysX.Lib, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
    static extern PxTriangleMeshGeometryPtr C_CONST_REF_PxGeometryHolder_triangleMesh(PxGeometryHolder cls);
    public PxTriangleMeshGeometryPtr triangleMesh(){
        return C_CONST_REF_PxGeometryHolder_triangleMesh(this);    
    }

    [DllImport(PhysX.Lib, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
    static extern PxHeightFieldGeometryPtr C_REF_PxGeometryHolder_heightField(PxGeometryHolder cls);
    public PxHeightFieldGeometryPtr heightField(){
        return C_REF_PxGeometryHolder_heightField(this);    
    }

    [DllImport(PhysX.Lib, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
    static extern PxHeightFieldGeometryPtr C_CONST_REF_PxGeometryHolder_heightField(PxGeometryHolder cls);
    public PxHeightFieldGeometryPtr heightField(){
        return C_CONST_REF_PxGeometryHolder_heightField(this);    
    }

    [DllImport(PhysX.Lib, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
    static extern void C_PxGeometryHolder_storeAny(PxGeometryHolder cls,PxGeometryPtr geometry);
    public void storeAny(PxGeometryPtr geometry){
        return C_PxGeometryHolder_storeAny(this,geometry);    
    }

    [DllImport(PhysX.Lib, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
    static extern PxGeometryHolder C_PxGeometryHolder_PxGeometryHolder();
    public unsafe PxGeometryHolder(){
        var _new = C_PxGeometryHolder_PxGeometryHolder();        fixed (void* ptr = &this)
          Buffer.MemoryCopy(&_new, ptr, Marshal.SizeOf(this), Marshal.SizeOf(this));    
    }

    [DllImport(PhysX.Lib, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
    static extern PxGeometryHolder C_PxGeometryHolder_PxGeometryHolder(PxGeometryPtr geometry);
    public unsafe PxGeometryHolder(PxGeometryPtr geometry){
        var _new = C_PxGeometryHolder_PxGeometryHolder(geometry);        fixed (void* ptr = &this)
          Buffer.MemoryCopy(&_new, ptr, Marshal.SizeOf(this), Marshal.SizeOf(this));    
    }

    [DllImport(PhysX.Lib, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
    static extern void C_PxGeometryHolder_put(PxGeometryHolder cls,PxGeometryPtr geometry);
    public void put(PxGeometryPtr geometry){
        return C_PxGeometryHolder_put(this,geometry);    
    }

    [DllImport(PhysX.Lib, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
    static extern Ptr C_REF_PxGeometryHolder_get(PxGeometryHolder cls);
    public Ptr get(){
        return C_REF_PxGeometryHolder_get(this);    
    }

    [DllImport(PhysX.Lib, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
    static extern Ptr C_CONST_REF_PxGeometryHolder_get(PxGeometryHolder cls);
    public Ptr get(){
        return C_CONST_REF_PxGeometryHolder_get(this);    
    }


}
public partial class  {
    [DllImport(PhysX.Lib, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
    static extern  C__();
    public unsafe (){
        var _new = C__();        fixed (void* ptr = &this)
          Buffer.MemoryCopy(&_new, ptr, Marshal.SizeOf(this), Marshal.SizeOf(this));    
    }


}
